@@ -1,3 +1,13 @@
+2012-12-05  Andrey Adaikin  <aandrey@chromium.org>
+
+        Web Inspector: [Canvas] nit: add more typization for js compiler
+        https://bugs.webkit.org/show_bug.cgi?id=103994
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/InjectedScriptCanvasModuleSource.js:
+        (.):
+
 2012-12-05  Hans Muller  <hmuller@adobe.com>
 
         [CSS Exclusions] ExclusionShape inlines should use isFlippedBlocksWritingMode()
